# ShadPKG

./: CMakeLists.txt  HOWWORKS.md  README.md  build.py  main.cpp  simple_log.h
common/: assert.cpp  config.cpp  config_stub.cpp  debug.h  io_file_stub.cpp  log_stub.cpp  ntapi.h  ntapi_stub.cpp  path_util.cpp
common/logging/: backend.cpp  log.h
core/: linker.cpp
core/devices/: logger_stub.cpp  logger_stub.h
core/file_format/: entry_name.cpp  pkg.cpp  pkg.h  trp.cpp
core/file_sys/: file.cpp  file.h  fs.cpp  fs.h
core/libraries/kernel/: file_system.cpp  file_system.h  time.h
core/libraries/save_data/: save_backup.cpp
